@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 23:47:50 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 23:53:57 +0800</lastBuildDate>
 
   <item>
   <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
@@ -13,5 +13,11 @@
   <description> 日本的萬聖節與眾不同，東京在10月31日前會出現許多相關活動。這些活動包括超自然貓節和立川妖怪盂蘭盆舞等。如果你想參加不那麼恐怖的活動，可以前往遍布首都的許多市民節。  立川妖怪盂蘭盆舞 </description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 23:47:50 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
+  <link>https://www.famechos.me/news/東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選.html</link>
+  <description>如果你錯過了在京都祇園觀賞藝妓的機會不要擔心在東京也有機會看到藝妓你只需要知道在哪裡找藝妓是受過古典訓練的表演者掌握多種技能包括交談藝術演奏三味線飲酒遊戲詩歌和...</description>
+  <category>Others</category>
+  <pubDate>Fri, 11 Oct 2024 23:53:57 +0800</pubDate>
 </item></channel>
 </rss>
