@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 23:49:32 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 23:53:57 +0800</lastBuildDate>
 
   <item>
   <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
@@ -19,5 +19,11 @@
   <description>韓國音樂著作權協會KOMCA計劃改變策略不再對不遵守音樂版權法規的健身房業主採取法律行動而是通過積極宣傳提高版權意識KOMCA主席ChuGayeoul最近訪問了全國11個負責向健身房收取音樂版權費的中心收集現場投訴他認為創造一個版...</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 23:49:32 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選</title>
+  <link>https://www.famechos.me/news/東京萬聖節前奏！超自然貓節、妖怪盂蘭盆舞等10月7日至13日東京活動精選.html</link>
+  <description>如果你錯過了在京都祇園觀賞藝妓的機會不要擔心在東京也有機會看到藝妓你只需要知道在哪裡找藝妓是受過古典訓練的表演者掌握多種技能包括交談藝術演奏三味線飲酒遊戲詩歌和...</description>
+  <category>Others</category>
+  <pubDate>Fri, 11 Oct 2024 23:53:57 +0800</pubDate>
 </item></channel>
 </rss>
