@@ -1,1 +1,2 @@
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-halloween-yokai-and-local-festivals/
+https://www.koreaherald.com/view.php?ud=20241002050690
